base/deploy-back/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: "nodejs-backend"
    namespace: default
    annotations:
      kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: instance
      alb.ingress.kubernetes.io/subnets: subnet-0ac680230587ddafa,subnet-035660690fd31ccd8
spec:
    rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-backend
                port:
                  number: 8080
